--- a/index_sqlite.html
+++ b/index_sqlite.html
@@ -903,6 +903,7 @@
                 <div class="space-y-4">
                     <div>
                         <label for="settingsScriptUrl" class="block text-sm font-medium text-slate-700">API Server URL</label>
+                        <p class="text-sm text-slate-500 mb-1">URL ของเซิร์ฟเวอร์ API สำหรับระบบจัดการร้านยา (Node.js + SQLite)</p>
                         <input type="text" id="settingsScriptUrl" placeholder="https://your-domain.railway.app" class="mt-1 block w-full p-2 border border-slate-300 rounded-md shadow-sm focus:ring-emerald-500 focus:border-emerald-500">
                     </div>
                     <button id="settingsSaveBtn" class="bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700">บันทึกการตั้งค่า</button>
